--- a/01_Learn_React_basic/01_React初体验/03_Hello_React_重构.html
+++ b/01_Learn_React_basic/01_React初体验/03_Hello_React_重构.html
@@ -1,75 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello React</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Hello React</title>
+</head>
+<body>
 
-    <div id="root"></div>
+  <div id="root"></div>
 
-    <script src="../lib/react.js"></script>
-    <script src="../lib/react-dom.js"></script>
-    <script src="../lib/babel.js"></script>
+  <script src="../lib/react.js"></script>
+  <script src="../lib/react-dom.js"></script>
+  <script src="../lib/babel.js"></script>
 
-    <script type="text/babel">
-      /*let message = "Hello World";
+  <script type="text/babel">
+    /*let message = "Hello World";
 
-      // 1. 封装函数，用于点击事件
-      function changeText() {
-          // 1.1 改变文本
-          message = "Hello React";
-          // 1.2 重新渲染，调用渲染函数进行渲染
-          rootRender()
-      }
+    // 1. 封装函数，用于点击事件
+    function changeText() {
+        // 1.1 改变文本
+        message = "Hello React";
+        // 1.2 重新渲染，调用渲染函数进行渲染
+        rootRender()
+    }
 
-      // 2. 和root节点绑定
-      const root = ReactDOM.createRoot(document.querySelector("#root"));
+    // 2. 和root节点绑定
+    const root = ReactDOM.createRoot(document.querySelector("#root"));
 
-      // 3. ReactDOM渲染，将这个部分渲染为一个函数
-      function rootRender() {
-          root.render((
-              <div>
-                  <h2>{message}</h2>
-                  <button onClick={changeText}>点击我就送999$</button>
-              </div>
-          ))
-      }
-
-      // 4. 调用函数进行渲染
-      rootRender()*/
-
-      // 现在将上面的代码重构为组件化的开发
-
-      // 1. 定义类组件，类名必须大写！
-      class App extends React.Component {
-        // 1.1 组件数据，统一封装到构造函数的 state中
-        constructor() {
-          super();
-
-          this.state = {
-            message: "Hello World"
-          }
-        }
-
-        // 1.2 组件方法
-
-        // 1.3 渲染数据，固定的render方法
-        render() {
-          return (
+    // 3. ReactDOM渲染，将这个部分渲染为一个函数
+    function rootRender() {
+        root.render((
             <div>
-              <h2>{this.state.message}</h2>
-              <button>点击我就送999$</button>
+                <h2>{message}</h2>
+                <button onClick={changeText}>点击我就送999$</button>
             </div>
-          )
+        ))
+    }
+
+    // 4. 调用函数进行渲染
+    rootRender()*/
+
+    // 现在将上面的代码重构为组件化的开发
+
+    // 1. 定义类组件，类名必须大写！
+    class App extends React.Component {
+      // 1.1 组件数据，统一封装到构造函数的 state中
+      constructor() {
+        super();
+
+        this.state = {
+          message: "Hello World"
         }
+
+        // start: 在这里需要提前绑定好this，不然this就会是undefined
+        // this.btnClick = this.btnClick.bind(this)
       }
 
-      // 2. 创建root进行绑定
-      const root = ReactDOM.createRoot(document.querySelector("#root"))
+      // 1.2 组件方法
+      btnClick() {
+        // 改变state的值
+        this.setState({
+          message: "Hello React"
+        })
+      }
 
-      // 3. 进行渲染
-      root.render(<App/>)
-    </script>
-  </body>
+      // 1.3 渲染数据，固定的render方法
+      render() {
+        // end: <button onClick={this.btnClick}>点击我就送999$</button>
+        // 这句话还可以这样写 <button onClick={this.btnClick.bind(this)}>点击我就送999$</button>
+        return (
+          <div>
+            <h2>{this.state.message}</h2>
+            <button onClick={this.btnClick.bind(this)}>点击我就送999$</button>
+          </div>
+        )
+      }
+    }
+
+    // 2. 创建root进行绑定
+    const root = ReactDOM.createRoot(document.querySelector("#root"))
+
+    // 3. 进行渲染
+    root.render(<App/>)
+  </script>
+</body>
 </html>
